Fixed tm symbol clipping out of text box

--- a/client/src/app/pages/main/gamemodes/gamemodes.component.scss
+++ b/client/src/app/pages/main/gamemodes/gamemodes.component.scss
@@ -45,7 +45,7 @@
   text-align: center;
   border-radius: 2px;
   z-index: 1000;
-  width: 55%;
+  width: 55px;
   position: absolute;
   top: 5px;
   right: -8px;
